<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="1">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".9" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".1"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="270"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <ImageView
            android:id="@+id/iv_save"
            android:layout_width="@dimen/image_view_width"
            android:layout_height="@dimen/image_view_width"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/save"
            android:rotation="-90"
            android:src="@drawable/save_selector" />

        <ImageView
            android:id="@+id/iv_capture"
            android:layout_width="@dimen/image_view_width"
            android:layout_height="@dimen/image_view_width"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/capture"
            android:src="@drawable/capture_selector" />

        <ImageView
            android:id="@+id/iv_retake"

            android:layout_width="@dimen/image_view_width"
            android:layout_height="@dimen/image_view_width"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/retake"
            android:rotation="-90"
            android:saveEnabled="false"
            android:src="@drawable/recapture_selector" />

    </LinearLayout>
</LinearLayout>